--- a/_config.yml
+++ b/_config.yml
@@ -103,7 +103,7 @@ youtube_id: # your youtube channel id (youtube.com/@<youtube_id>)
 discord_id: # your discord id (18-digit unique numerical identifier)
 
 contact_note: >
-  Happy to chat in general!
+  Happy to chat in general! Will be looking for opportunities soon, looking for a start in Sept. 2024.
 
 # -----------------------------------------------------------------------------
 # Analytics and search engine verification
