--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -3,20 +3,28 @@
   contents:
     - name: Full Name
       value: Victor Schmidt
-    - name: Date of Birth
-      value: December 8th, 1992
     - name: Languages
-      value: French, English, Spanish (intermediate), Arabic (beginner)
+      value: French (mother tongue), English (fluent), Spanish (intermediate), Arabic (beginner)
+
+- title: Currently
+  type: map
+  contents:
+    - name: Occupation
+      value: Co-founder and CTO @ <a href="https://entalpic.ai" rel="noreferrer noopener" target="_blank">EntΔlpic</a>
+    - name: About
+      value: Entalpic is an AI-driven discovery company for chemistry and material science, fostering greener and smarter industrial processes. We just raised a great seed round 🔥
+    - name: We're&nbsp;hiring!
+      value: Visit our <a href="hhttps://jobs.breega.com/jobs?split_view=true&query=Entalpic" rel="noreferrer noopener" target="_blank">currenly open positions</a> 🎉
 
 - title: Education
   type: time_table
   contents:
     - title: PhD
       institution: Mila - Université de Montréal, Montréal, Canada
-      year: 2019 - Now
+      year: 2019 - 2024
       description:
         - Supervised by Prof. Yoshua Bengio
-        - Focus on applications of AI in the fight against climate change
+        - <em>Deep Learning Applications to Climate Change Mitigation<em>
         - title: Visualizing the consequences of climate change (2019-2022)
           contents:
             - "Problematic: GANs were invented at Mila. Can we use them for good?"
@@ -29,14 +37,14 @@
             - "Solution: create tools for the community to measure the carbon impact of their AI models and experiments."
             - "Online calculator: <em>Quantifying the Carbon Emissions of Machine Learning</em> (Climate Change AI workshop, NeurIPS 2019) -> <a href='https://mlco2.github.io/impact' target='_blank'>mlco2.github.io/impact</a>"
             - "Python package: <a href='https://mlco2.github.io/codecarbon' target='_blank'><code style='display: inline-block'>codecarbon</code></a>"
-        - title: "Materials discovery (2022-now)"
+        - title: "Materials discovery (2022-2024)"
           contents:
             - "Problematic: Materials discovery is a slow and expensive process. Can we use AI to accelerate it?"
-            - "Solution: Use GFlowNets to explore the space of electro-catalysts and hope to discover materials able to improve the energy efficiency of electro-chemical reactions such as the electrolysis of hydrogene for energy storage."
-            - "Paper: <em>PhAST: Physics-Aware, Scalable, and Task-specific GNNs for Accelerated Catalyst Design</em> (under review, JMLR)"
+            - "Solution: Use GFlowNets to explore the space of electro-catalysts in order to discover materials able to improve the energy efficiency of electro-chemical reactions such as the electrolysis of water for energy storage."
+            - "Paper: <em>PhAST: Physics-Aware, Scalable, and Task-specific GNNs for Accelerated Catalyst Design</em> (JMLR 2024)"
             - "Paper: <em>FAENet: Frame Averaging Equivariant GNN for Materials Modeling</em> (ICML 2023)"
-            - "Work in progress: using GflowNets to sample crystal structures"
-            - "Future work: putting it all together, using FAENet as a reward function for the GFlowNet and sample electro-catalysts"
+            - "Paper: <em>Crystal-GFN: sampling crystals with desirable properties and constraints
+</em> (AI4Mat @ Neurips 2023)"
     - title: MSc. Machine Learning
       institution: University College London, London, UK
       year: 2016-2017
@@ -62,7 +70,6 @@
           contents: <em>"During 10 months, a cohort of about 30 Public Interest Entrepreneurs work within public administrations in teams of 2 or 3 on challenges linked to data and digital transformation."</em> (Etalab.gouv)
         - Document classification and sentence highlighting
         - Validation web app to mesure noise in the labels and improve understanding of the models.
-        - Translation (Fr-En) proof of concept for fine-tuned NMT
         - <a href="https://eig.etalab.gouv.fr/defis/hopkins/">Project page (French)</a>
     - title: Data Science Engineer
       institution: Rythm, Inc, Paris, France
@@ -77,21 +84,17 @@
       year: July 2014 - Aug. 2014
       description: Development of a mobile web app
 
-    - title: Maths Teacher Assistant
-      institution: Lycee Janson de Sailly, Paris
-      year: Sept. 2013 - June 2014
-
 - title: A Few Open Source Projects I care about
   type: time_table
   contents:
     - title: <a href="https://github.com/vict0rsch/papermemory">PaperMemory</a>
-      year: 2020-Now
+      year: 2020-2024
       description:
         - title: A browser extension to automatically record the papers you read. Also finds code repositories and matches Arxiv papers to their published version. Never lose a paper again.
           contents:
             - JavaScript (+Gulp, Mocha, Pupeeteer), HTML, CSS.
             - Started as a personal tool, now maintained for a community
-        - title: 350+ ⭐️
+        - title: 450+ ⭐️
           contents: ""
     - title: <a href="https://github.com/mlco2/codecarbon">CodeCarbon</a>
       year: 2020-2022
@@ -103,17 +106,17 @@
             - Coordinator of a team of 5-10 open source contributors
             - Major code contributor
             - Data For Good France Season 9 leader
-        - title: 700+ ⭐️
+        - title: 1.1k+ ⭐️
           contents: ""
     - title: <a href="https://github.com/vict0rsch/gitmopy">GitmoPy</a>
-      year: 2023-Now
+      year: 2023
       description:
         - title: A simple Python CLI to use the Gitmoji convention in your commits
           contents:
             - Mostly a personal tool to learn how to build a Python CLI with <code>typer</code> and <code>GitPython</code>
-    - title: <a href="https://metada.org">metada.org</a>
-      year: 2018-2019
-      description: A simple website & browser extension to visualize the hierarchy of ownership in the French media (React, Cytoscape.js, Python, Flask, PostgreSQL)
+    # - title: <a href="https://metada.org">metada.org</a>
+    #   year: 2018-2019
+    #   description: A simple website & browser extension to visualize the hierarchy of ownership in the French media (React, Cytoscape.js, Python, Flask, PostgreSQL)
 
 - title: Honors and Awards
   type: time_table
