--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ title: blank # the website title (if blank, full name will be used instead)
 first_name: Victor
 middle_name: ""
 last_name: Schmidt
-email: schmidtv@mila.quebec
+# email: ""
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
   PhD candidate at Mila, Université de Montréal, supervised by Prof. Yoshua Bengio. I am interested in applications of AI in the fight against climate change.
 footer_text: ""
@@ -42,7 +42,7 @@ repo_trophies:
 # will use title and url fields
 # Take a look to https://github.com/jekyll/jekyll-feed for more customization
 
-rss_icon: true
+rss_icon: false
 
 # -----------------------------------------------------------------------------
 # Layout
@@ -103,7 +103,7 @@ youtube_id: # your youtube channel id (youtube.com/@<youtube_id>)
 discord_id: # your discord id (18-digit unique numerical identifier)
 
 contact_note: >
-  Happy to chat in general! Will be open for opportunities soon, looking for a start in Sept. 2024.
+  <br/>Happy to chat in general! For information about Entalpic, visit our <a href="https://entalpic.ai" target="_blank" rel="noopener noreferrer">website</a> or email info@entalpic.ai
 
 # -----------------------------------------------------------------------------
 # Analytics and search engine verification
