update entalpic tagline

--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -12,7 +12,7 @@
     - name: Occupation
       value: Co-founder and CTO @ <a href="https://entalpic.ai" rel="noreferrer noopener" target="_blank">EntΔlpic</a>
     - name: About
-      value: Entalpic is an AI-driven discovery company for chemistry and material science, fostering greener and smarter industrial processes. We just raised a great seed round 🔥
+      value: Entalpic is an AI-driven materials discovery company, fostering greener and smarter industrial processes. We just raised a great seed round 🔥
     - name: We're&nbsp;hiring!
       value: Visit our <a href="hhttps://jobs.breega.com/jobs?split_view=true&query=Entalpic" rel="noreferrer noopener" target="_blank">currenly open positions</a> 🎉
 
